syntax = "proto3";
package leo.statusx;
option go_package = "github.com/go-leo/leo/v3/statusx;statusx";
import "google/rpc/status.proto";

// Error is a wrapper of google.rpc.Status and HttpStatus
message Error {
  // Status is a wrapper of google.rpc.Status
  google.rpc.Status grpc_status = 2;

  // HttpStatus is a wrapper of http status
  HttpStatus http_status = 1;
}

// HttpStatus is a wrapper of http status
message HttpStatus {
  // The HTTP status code, such as 200 or 404.
  int32 status = 1;

  // The HTTP reason phrase, such as "OK" or "Not Found".
  string reason = 2;
}